// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Default should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    accessibilityLabel="john.doe's avatar"
    accessible={true}
    style={
      [
        {
          "borderRadius": 4,
          "height": 120,
          "width": 120,
        },
        {
          "marginHorizontal": 10,
        },
      ]
    }
    testID="avatar"
  >
    <ViewManagerAdapter_ExpoImage
      borderRadius={4}
      containerViewRef={{"current":"Object"}}
      contentFit="cover"
      contentPosition={
        {
          "left": "50%",
          "top": "50%",
        }
      }
      height={120}
      nativeViewRef={{"current":"NativeComponent"}}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      placeholder={[]}
      priority="high"
      source={
        [
          {
            "headers": undefined,
            "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=240",
          },
        ]
      }
      style={
        {
          "borderRadius": 4,
          "height": 120,
          "width": 120,
        }
      }
      transition={null}
      width={120}
    />
  </View>
</View>
`;

exports[`Story Snapshots: WithEdit should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    accessibilityLabel="john.doe's avatar"
    accessible={true}
    style={
      [
        {
          "borderRadius": 4,
          "height": 120,
          "width": 120,
        },
        {
          "marginHorizontal": 10,
        },
      ]
    }
    testID="avatar"
  >
    <ViewManagerAdapter_ExpoImage
      borderRadius={4}
      containerViewRef={{"current":"Object"}}
      contentFit="cover"
      contentPosition={
        {
          "left": "50%",
          "top": "50%",
        }
      }
      height={120}
      nativeViewRef={{"current":"NativeComponent"}}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      placeholder={[]}
      priority="high"
      source={
        [
          {
            "headers": undefined,
            "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=240",
          },
        ]
      }
      style={
        {
          "borderRadius": 4,
          "height": 120,
          "width": 120,
        }
      }
      transition={null}
      width={120}
    />
  </View>
  <View
    accessibilityLabel="Edit room photo"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 4,
        "left": 4,
        "right": 4,
        "top": 4,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#E4E7EA",
        },
        {},
        {
          "height": undefined,
          "marginBottom": 0,
          "marginTop": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
      ]
    }
    testID="avatar-edit-button"
  >
    <Text
      style={
        [
          {
            "color": "#1F2329",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontWeight": "500",
            "textAlign": "center",
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "600",
            "textAlign": "left",
          },
        ]
      }
    >
      Edit
    </Text>
  </View>
</View>
`;
